--- a/style.css
+++ b/style.css
@@ -156,6 +156,8 @@ body {
   align-items: center;
   padding: 20px;
   background-color: #000;
+  border-bottom: 1px solid;
+  border-image: linear-gradient(to right, rgba(255, 255, 255, 0) 7%, rgba(110, 110, 110, 1) 50%, rgba(255, 255, 255, 0) 93%) 1;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: absolute;
   top:0;
