--- a/style.css
+++ b/style.css
@@ -9,11 +9,10 @@ body {
   display: flex;
   align-items: stretch;
   justify-content: center;
-  height: 100vh;
+  min-height: 900px;
   background-color: #000;
-
   font-family: 'Oswald', sans-serif;
-  overflow: hidden;
+  overflow: auto;
 }
 
 #bc div.square {
@@ -83,10 +82,8 @@ body {
 /* wait list button */
 
 #bc .button-container {
-  position: absolute;
-  margin: 0 auto;
-  width: 100%;
-  bottom: 20%;
+  position: relative;
+  margin: 170px auto;
   left: 50%;
 }
 #bc .button-container .button {
@@ -137,18 +134,6 @@ body {
   bottom: 30px;
 }
 
-/*.shadow {*/
-/*  position: absolute;*/
-/*  width: 200vw;*/
-/*  height: 200vh;*/
-/*  left: 50%;*/
-/*  top: 50%;*/
-/*  z-index: -3;*/
-/*  transform: translateX(-50%) translateY(-50%);*/
-/*  background-image: radial-gradient(circle at center, transparent, #222 7%);*/
-/*}*/
-
-
 /* Header */
 .site-header {
   display: flex;
@@ -188,6 +173,7 @@ body {
 
 .site-name .colored {
   color: #38b6ff;
+  animation: animated_text 10s ease infinite;
 }
 
 
@@ -266,48 +252,7 @@ body {
   opacity: .0;
 }
 
-.success {
-  width: 80%;
-  height: 150px;
-  text-align: center;
-  position: relative;
-  top: -890px;
-  left: 450px;
-  opacity: .0;
-  transition: all .8s .4s ease;
-}
-
-.success-left {
-  transform: translateX(-406px);
-  opacity: 1;
-}
-
-.successtext {
-  color: #ffffff;
-  font-size: 16px;
-  font-weight: 300;
-  margin-top: -35px;
-  padding-left: 37px;
-  padding-right: 37px;
-}
-
-#check path {
-  stroke: #ffffff;
-  stroke-linecap:round;
-  stroke-linejoin:round;
-  stroke-width: .85px;
-  stroke-dasharray: 60px 300px;
-  stroke-dashoffset: -166px;
-  fill: rgba(255,255,255,.0);
-  transition: stroke-dashoffset 2s ease .5s, fill 1.5s ease 1.0s;
-}
-
-#check.checked path {
-  stroke-dashoffset: 33px;
-  fill: rgba(255,255,255,.03);
-}
-
-.form-signin input, .form-signup input {
+.form-signin input {
   color: #ffffff;
   font-size: 13px;
 }
@@ -364,15 +309,8 @@ label {
 }
 
 
-.btn-signup:hover, .btn-signin:hover {
+.btn-signin:hover {
   cursor: pointer;
   background-color: #0F4FE6;
   transition: background-color .5s;
-}
-
-h1 {
-  color: #ffffff;
-  font-size: 35px;
-  font-weight: 300;
-  text-align: center;
 }
