--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ body {
   overflow: auto;
 }
 
+.site-header .design {
+  /*margin-top: 2vh;*/
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #888888;
+}
+
 #bc div.square {
   margin-top: 200px;
   position: relative;
@@ -58,6 +65,19 @@ body {
   filter: blur(40px);
   z-index: -1;
   animation: animated_bg 3s ease infinite;
+}
+
+.pulse {
+  animation: pulse-animation 500ms;
+}
+
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0px rgba(0, 195, 255, 0.2);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba(0, 195, 255, 0);
+  }
 }
 
 @keyframes animated_text {
@@ -458,6 +478,11 @@ label {
   .btn-signin {
     height: 40px;
   }
+  .h-global-transition-all {
+    display: none;
+  }
+}
+@media (max-height: 888px){
   .h-global-transition-all {
     display: none;
   }
