--- a/solution.css
+++ b/solution.css
@@ -1,30 +1,3 @@
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-.site-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-}
-
-.site-name {
-    font-size: 2rem;
-    color: #333;
-}
-
-.contact-button {
-    background: #38b6ff;
-    border: none;
-    padding: 10px 20px;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
 .team-member {
     text-align: center;
     margin: 50px auto;
@@ -62,7 +35,7 @@
 
 
 .text-header {
-    color: #888888;
+    color: #BBBBBB;
     margin-top: 160px;
     text-align: center;
 }
@@ -72,5 +45,10 @@
     text-align: center;
     font-size: 28px;
     line-height: 1.6;
-    color: #999999;
+    color: #bbb;
+}
+.team-row {
+    display: flex;
+    width: 50%;
+    margin: 30px auto;
 }
