--- a/team.css
+++ b/team.css
@@ -1,30 +1,3 @@
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-.site-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-}
-
-.site-name {
-    font-size: 2rem;
-    color: #333;
-}
-
-.contact-button {
-    background: #38b6ff;
-    border: none;
-    padding: 10px 20px;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
 .team-member {
     text-align: center;
     margin: 50px auto;
@@ -44,11 +17,11 @@
 
 .team-member h3 {
     font-size: 1.4rem;
-    color: #888;
+    color: #BBBBBB;
 }
 
 .team-member p {
-    color: #888;
+    color: #BBBBBB;
     font-size: 1.1rem;
     max-width: 400px;
     margin: 0 auto;
@@ -78,7 +51,7 @@
 }
 
 .text-header {
-    color: #888888;
+    color: #BBBBBB;
     margin-top: 160px;
     text-align: center;
 }
