--- a/solution.css
+++ b/solution.css
@@ -52,3 +52,13 @@
     width: 50%;
     margin: 30px auto;
 }
+
+@media screen and (max-width: 768px) {
+    .solution-description {
+    }
+
+    .team-row {
+        width: 90%;
+        margin: 30px 20px;
+    }
+}
