--- a/style.css
+++ b/style.css
@@ -340,24 +340,26 @@ label {
   transition: background-color .5s;
 }
 
-@media (max-width: 575.98px) {
+@media (max-height: 575.98px) {
   body {
     min-height: 100vh; /* Change to viewport height units */
   }
 
   #bc div.square {
-    width: 250px;
-    height: 250px;
-    font-size: 2rem;
+    width: 220px;
+    height: 220px;
+    font-size: 1.8rem;
     font-weight: 250;
-    line-height: 250px;
-    margin-top: 120px;
+    line-height: 220px;
+    margin-top: 100px;
   }
 
   #bc .button-container {
-    margin: 140px auto;
+    margin: 100px auto;
   }
-
+  #bc .button-container .button {
+    font-size: 1.4rem;
+  }
   .site-header {
     padding: 0;
   }
@@ -407,19 +409,19 @@ label {
   }
 }
 
-@media (min-width: 576px) and (max-width: 767.98px) {
+@media (min-height: 576px) and (max-height: 825px) {
   /* CSS rules for small devices */
   body {
     min-height: 100vh; /* Change to viewport height units */
   }
 
   #bc div.square {
-    width: 350px;
-    height: 350px;
-    font-size: 3rem;
+    width: 250px;
+    height: 250px;
+    font-size: 2rem;
     font-weight: 250;
-    line-height: 350px;
-    margin-top: 200px;
+    line-height: 250px;
+    margin-top: 100px;
   }
 
   .h-global-transition-all {
@@ -465,7 +467,7 @@ label {
   }
 
   #bc .button-container {
-    margin: 240px auto;
+    margin: 140px auto;
   }
 
   #bc .button-container .button {
